# janeiroweb

./: db.sqlite3  manage.py  pyproject.toml
.github/workflows/: django.yml
hospital/: admin.py  forms.py  models.py  urls.py  views.py
janeiro/: asgi.py  settings.py  urls.py  wsgi.py
static/janeiro/assets/: gs 5.jfif
static/janeiro/css/: about.css.map  article.css  careers.css  contacts.css.map  main.css  media.css.map  services.css
static/janeiro/js/: main.js
staticfiles/janeiro/assets/: file-20200416-192689-1aiush6.avif  gs 2.jfif
staticfiles/janeiro/css/: about.css  article.css.map  careers.css.map  contacts.css  main.css.map  media.css  services.css.map
staticfiles/janeiro/js/: main.dev.js
templates/janeiro/: about.html  base.html  careers.html  contacts.html  index.html  news.html  news_detail.html  services.html
