[tool.poetry]
name = "janeiro"
version = "0.1.0"
description = ""
authors = ["Odhiambo Paul <paulodhiambo962@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
django-ckeditor = "^6.7.0"
pillow = "^10.0.0"
django-slugify-processor = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

